--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 name: Reverie
 
 # Name of the author
-author: Amit Merchant
+author: Sara Popham
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: Computational Neuroscience PhD Student
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/sara.png
 
 #
 # Flags below are optional
@@ -21,15 +21,15 @@ avatar: /images/reverie.png
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: amit.d.merchant@gmail.com
+  email: spopham@berkeley.edu
   facebook:
   flickr:
-  github: amitmerchant1990/reverie
+  github: spopham
   instagram:
-  linkedin: 
+  linkedin: sara-popham-b17644123
   pinterest:
-  rss: rss
-  twitter: amit_merchant
+  rss: 
+  twitter: sara_poppop
   stackoverflow: 
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,18 +41,18 @@ footer-links:
 disqus: 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-43339302-11
+google_analytics: 
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.amitmerchant.com/reverie
-enforce_ssl: https://www.amitmerchant.com/reverie
+url: http://spopham.github.io
+enforce_ssl: https://spopham.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/reverie"
+baseurl: 
 
 #
 # !! You don't need to change any of the configuration flags below !!
