--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Personal Website
+name: Sara Popham's Personal Website
 
 # Name of the author
 author: Sara Popham
